--- a/blogers_platform/vercel.json
+++ b/blogers_platform/vercel.json
@@ -2,9 +2,21 @@
   "version": 2,
   "name": "bloggers-platform",
   "builds": [
-    { "src": "src/main.ts", "use": "@vercel/node" }
+    {
+      "src": "src/main.ts",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "src/main.ts" }
+    {
+      "src": "/(.*)",
+      "dest": "src/main.ts",
+      "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "DELETE"
+      ]
+    }
   ]
 }
