--- a/blogers_platform/package.json
+++ b/blogers_platform/package.json
@@ -30,11 +30,13 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "mongoose": "^8.16.0",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
